--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -1,3 +1,5 @@
+	    <script src="http://localhost:8050/main/bundle.js"></script>
+
 <script src="/reload/reload.js"></script>      
 </body>
 </html>
