--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
 <div>登录态：</div>
+<link rel="stylesheet" href="http://localhost:8050/main.css">
 <div>
 	<% if (user) { %>
 		<a title="登出" href="/logout">登出</a>
