增加开发监听

--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -1,4 +1,6 @@
 <%- include header %>
-	    <div id="app"></div>
+	    <div id="app">
+	    	<%-mark%>
+	    </div>
 	    <span><%= success %><%= errors %></span>
 <%- include footer %>
