--- a/client/components/TagItem/style.scss
+++ b/client/components/TagItem/style.scss
@@ -2,8 +2,12 @@
 * @Author: zhanghuiming
 * @Date:   2017-08-24 16:51:27
 * @Last Modified by:   zhanghuiming
-* @Last Modified time: 2017-08-27 14:02:11
+* @Last Modified time: 2017-09-07 17:00:25
 */
 div{
 	width:100px;
+	color:#336699;
+}
+h3{
+	a{font-color:red;}
 }
