1.添加样式 2.组件拆分 3.目录规划 4.注册业务逻辑完善

--- a/client/components/TagItem/style.scss
+++ b/client/components/TagItem/style.scss
@@ -2,12 +2,12 @@
 * @Author: zhanghuiming
 * @Date:   2017-08-24 16:51:27
 * @Last Modified by:   zhanghuiming
-* @Last Modified time: 2017-09-07 17:00:25
+* @Last Modified time: 2017-09-10 08:39:53
 */
-div{
-	width:100px;
-	color:#336699;
-}
+// div{
+// 	width:100px;
+// 	color:#336699;
+// }
 h3{
 	a{font-color:red;}
 }
