--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -2,15 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://v4.bootcss.com/docs/4.0/examples/signin/signin.css">
+<!-- 	<link rel="stylesheet" href="https://v4.bootcss.com/docs/4.0/examples/grid/grid.css">
+ -->	<link rel="stylesheet" href="http://localhost:8050/main.css">
 </head>
 <body>
-<div>登录态：</div>
-<link rel="stylesheet" href="http://localhost:8050/main.css">
-<div>
-	<% if (user) { %>
-		<a title="登出" href="/logout">登出</a>
-	<% } else { %>
-		<a title="登录" href="/login">登录</a><br>
-		<a title="注册" href="/reg">注册</a><br>
-	<% } %>
-</div>
+
